--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,21 @@
     font-style: normal;
 }
 
+h1 {
+    margin-top: 20px;
+    color: rgba(247, 230, 2, 1);
+    font-size: 3rem;
+}
+
+nav {
+    width: 100%;
+    background-color: rgba(0, 0, 139, 0.800);
+    height: auto;
+    text-align: center;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 0 6px 2px rgb(0, 0, 139);
+}
+
 body {
     display: flex;
     font-family: "BitcountGridSingle-Medium", sans-serif;
@@ -26,7 +41,7 @@ body {
 }
 
 form {
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 input[type="search"]{
@@ -35,7 +50,7 @@ input[type="search"]{
     padding-left: 10px;
     height: 2.5rem;
     background-color: rgba(0, 0, 139, 0.600);
-    color: rgb(0, 0, 139);
+    color:  rgba(247, 230, 2, 1);
     border-radius:10px 5px 5px 10px;
     box-shadow: 0 0 6px 2px rgb(0, 0, 139);
     backdrop-filter: blur(5px);
@@ -81,7 +96,7 @@ input[type="submit"]:hover {
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-    width: 20rem;
+    width: 21rem;
     height: auto;
     background-color: rgba(0, 0, 139, 0.600);
     border-radius: 10px;
@@ -142,5 +157,25 @@ sup {
     border-radius: 5px;
     gap: 1rem;
 
+}
 
+.spinner {
+    border: 6px solid rgba(255, 255, 255, 0.3);
+    border-top: 6px solid rgba(0, 0, 139, 0.500);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+    margin: 1rem auto;
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
+
+@keyframes spin {
+ to {
+    transform: rotate(360deg);
+ }  
 }
